[gd_scene load_steps=11 format=3 uid="uid://2ysnllukutvh"]

[ext_resource type="Texture2D" uid="uid://d0r3wb1dvtdrs" path="res://assets/enemies.png" id="1_lyxd2"]
[ext_resource type="Script" path="res://scripts/snake.gd" id="1_mwpaq"]
[ext_resource type="AudioStream" uid="uid://ds5m67gnvs380" path="res://assets/linder.mp3" id="3_iu613"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vctvv"]
size = Vector2(8, 5)

[sub_resource type="Animation" id="Animation_05o8i"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [70]
}

[sub_resource type="Animation" id="Animation_2eb8g"]
resource_name = "hit"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [82, 83, 82, 83, 82, 83]
}

[sub_resource type="Animation" id="Animation_hlwbb"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [70]
}

[sub_resource type="Animation" id="Animation_hle45"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [73, 74, 75, 76]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nkejy"]
_data = {
"RESET": SubResource("Animation_05o8i"),
"hit": SubResource("Animation_2eb8g"),
"idle": SubResource("Animation_hlwbb"),
"run": SubResource("Animation_hle45")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvjlc"]
size = Vector2(10, 8)

[node name="snake" type="CharacterBody2D"]
position = Vector2(0, -8)
collision_layer = 4
collision_mask = 7
script = ExtResource("1_mwpaq")

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2(2, 5.5)
shape = SubResource("RectangleShape2D_vctvv")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_lyxd2")
hframes = 14
vframes = 19
frame = 70

[node name="animation" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_nkejy")
}

[node name="left_detector" type="RayCast2D" parent="."]
position = Vector2(4, 6)
target_position = Vector2(-8, 0)
collision_mask = 6

[node name="right_detector" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(8, 0)
collision_mask = 6

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="collider" type="CollisionShape2D" parent="hitbox"]
position = Vector2(2, 4)
shape = SubResource("RectangleShape2D_wvjlc")
debug_color = Color(0.968627, 0, 0.462745, 0.419608)

[node name="audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_iu613")

[connection signal="animation_finished" from="animation" to="." method="_on_animation_animation_finished"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
